<package>
  <name>rrt_connect_planner</name>
  <version>0.0.0</version>
  <description>The rrt_connect_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="burgetf@informatik.uni-freiburg.de">burgetf</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  
  <!-- Use build_depend for packages you need at compile time: -->
  <!--<build_depend>message_generation</build_depend>-->
  <!--<build_depend>moveit_planners_ompl</build_depend>-->
  <build_depend>hrl_kinematics</build_depend>
  <build_depend>moveit_core</build_depend>
  <!--<build_depend>trajectory_processing</build_depend>-->
  <build_depend>rrt_planner_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>



  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  
  <!-- Use run_depend for packages you need at runtime: -->
  <!--<run_depend>message_runtime</run_depend>-->
   <!--<run_depend>moveit_planners_ompl</run_depend>-->
  <run_depend>hrl_kinematics</run_depend>
  <run_depend>moveit_core</run_depend>
  <!--<run_depend>trajectory_processing</run_depend>-->
  <run_depend>rrt_planner_msgs</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>







  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
	<!--<metapackage/>-->

    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
