<!--<package>
  <description brief="rrt_connect_planner_example">

     rrt_connect_planner_example

  </description>
  <author>Felix Burget</author>
  <license>BSD</license>
  <review status="unreviewed" notes=""/>
  <url>http://ros.org/wiki/rrt_connect_planner_example</url>
  
  <depend package="ompl_interface_ros"/>
  <depend package="rrt_connect_planner"/>
  <depend package="rrt_planner_msgs"/>-->
  
  
  <!-- Actions for NAO -->
 <!-- <depend package="actionlib"/>
  <depend package="actionlib_msgs"/>
  <depend package="nao_msgs"/>

</package>-->





<package>
  <name>rrt_connect_planner_example</name>
  <version>0.0.0</version>
  <description>The rrt_connect_planner_example package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="burgetf@informatik.uni-freiburg.de">burgetf</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  
  <!-- Use build_depend for packages you need at compile time: -->
  <!--<build_depend>message_generation</build_depend>-->
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>rrt_connect_planner</build_depend>
  <build_depend>rrt_planner_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nao_msgs</build_depend>



  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  
  <!-- Use run_depend for packages you need at runtime: -->
  <!--<run_depend>message_runtime</run_depend>-->
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>rrt_connect_planner</run_depend>
  <run_depend>rrt_planner_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>nao_msgs</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
	<!--<metapackage/>-->

    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
